--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -73,18 +73,18 @@
     <% foods.forEach(obj => { %>
 
       <div class="logs" id="N<%= obj.id %>">
-        <div class="fimg"><img src="" alt="food image"></div>
+        <div class="fimg"><img src="" alt=""></div>
         <div class="vert-row"></div>
         <div class="finfo">
           <div class="up">
             <p><%= obj.name %></p>
             <button class="fg"><%= obj.gr %>g</button>
             <div class="del">
-              <button id="D<%= obj.id %>">...</button>
+              <button onclick="displayBtn(this)" id="D<%= obj.id %>">...</button>
             </div>
-            <form>
-              <button id="T<%= obj.id %>">del</button>
-            </form>
+            <form action="/delete" method="post">
+              <button id="T<%= obj.id %>" name="id" value="<%= obj.id %>">del</button>
+            </form>          
           </div>
           <div class="down">
             <div class="fcal">
@@ -223,8 +223,14 @@
     }
 
     //Add .up .del button listeners
-    const del = document.querySelectorAll('.up .del button');
-    del.forEach(btn => console.log(btn));
+    // const del = document.querySelectorAll('.up .del button');
+    // del.forEach(btn => console.log(btn));
+
+    function displayBtn(D) {
+      const btn = document.querySelector(`.up form #T${D.id.match(/\d+/)[0]}`);
+      btn.style.display = "block";
+      setTimeout(() => {btn.style.display = "none"}, 3000);
+    }
     
 
   </script>
