--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -78,7 +78,11 @@
         <div class="finfo">
           <div class="up">
             <p><%= obj.name %></p>
-            <button class="fg"><%= obj.gr %>g</button>
+            <button onclick="displayInput(this)" class="fg" id="fg<%= obj.id %>" ><%= obj.gr %>g</button>
+            <form class="edit-form" action="/update" method="post" id="ef<%= obj.id %>">
+              <input type="number" id="inp<%= obj.id %>" onblur="updateGrams(this)" name="grams" />
+              <input type="hidden" name="food" value="<%= obj.id %>" />
+            </form>
             <div class="del">
               <button onclick="displayBtn(this)" id="D<%= obj.id %>">...</button>
             </div>
@@ -222,14 +226,28 @@
       progressCircle.style.boxShadow = "0 0 10px #ff000079";
     }
 
-    //Add .up .del button listeners
-    // const del = document.querySelectorAll('.up .del button');
-    // del.forEach(btn => console.log(btn));
-
+    //Delete logs
     function displayBtn(D) {
       const btn = document.querySelector(`.up form #T${D.id.match(/\d+/)[0]}`);
       btn.style.display = "block";
       setTimeout(() => {btn.style.display = "none"}, 3000);
+    }
+
+    //Edit logs
+    function displayInput(btn) {
+      const inp = document.querySelector(`.up #inp${btn.id.match(/\d+/)[0]}`);
+      btn.style.display = "none";
+      inp.style.display = "block";
+      inp.focus();
+    }
+    function updateGrams(inp) {
+      if (inp.value) {
+        document.querySelector(`.up #ef${inp.id.match(/\d+/)[0]}`).submit();
+      } else {
+        const btn = document.querySelector(`.up #fg${inp.id.match(/\d+/)[0]}`);
+        inp.style.display = "none";
+        btn.style.display = "block";
+      }
     }
     
 
