added more foods, improved responsiveness for big screens, search input works, user can now edit the grams of the foods that he adds, .log images are now smaller, user_foods database altered new column for food image paths, navbar has now images, new buy-premium button

--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -6,138 +6,115 @@
     const fullDate = monthNames[date.getMonth()] + ", " + date.getDate(); 
   %>
 
-  <div class="hero">
+  <div id="page">
+    <div class="hero">
 
-    <p id="date"><%= fullDate %></p>
-    <div id="circle">
-      <!-- <div id="circle-cover"></div> -->
-      <p>0 cal <br /> <span>/3500</span></p>
+      <p id="date"><%= fullDate %></p>
+
+      <a href="premium.ejs"><img id="crown" src="/icons/crown.png" /></a>
+
+      <div id="circle">
+        <!-- <div id="circle-cover"></div> -->
+        <p>0 cal <br /> <span>/3500</span></p>
+      </div>
+
+      <div id="total-macros">
+        <div class="macros-card" id="protein">
+          <p>protein</p>
+          <div class="m-bar">
+            <div class="progress"></div>
+          </div>
+          <p>130 gr <small> /50</small></p>
+        </div>
+        <div class="macros-card" id="fats">
+          <p>fats</p>
+          <div class="m-bar">
+            <div class="progress"></div>
+          </div>
+          <p>80 gr <small> /50</small></p>
+        </div>
+        <div class="macros-card" id="carbs">
+          <p>carbs</p>
+          <div class="m-bar">
+            <div class="progress"></div>
+          </div>
+          <p>153 gr <small> /50</small></p>
+        </div>
+      </div>
+
     </div>
 
-    <div id="total-macros">
-      <div class="macros-card" id="protein">
-        <p>protein</p>
-        <div class="m-bar">
-          <div class="progress"></div>
+    <section>
+      <!-- .logs*5>((.fbar>.prot*3)+(.fimg>img)+er+(.finfo>(.up>p{chicken}+button{100g}+.opt>button)+(.down>.fcal>p{365cal}^.fmacros>.p{28p}+.f{7f}+.c{0c}))) -->
+      
+      <!-- <div class="logs" id="chicken">
+        <div class="fbar">
+          <div class="prot"></div>
+          <div class="fats"></div>
+          <div class="carbs"></div>
         </div>
-        <p>130 gr <small> /50</small></p>
-      </div>
-      <div class="macros-card" id="fats">
-        <p>fats</p>
-        <div class="m-bar">
-          <div class="progress"></div>
-        </div>
-        <p>80 gr <small> /50</small></p>
-      </div>
-      <div class="macros-card" id="carbs">
-        <p>carbs</p>
-        <div class="m-bar">
-          <div class="progress"></div>
-        </div>
-        <p>153 gr <small> /50</small></p>
-      </div>
-    </div>
-
-  </div>
-
-  <section>
-    <!-- .logs*5>((.fbar>.prot*3)+(.fimg>img)+er+(.finfo>(.up>p{chicken}+button{100g}+.opt>button)+(.down>.fcal>p{365cal}^.fmacros>.p{28p}+.f{7f}+.c{0c}))) -->
-    
-    <!-- <div class="logs" id="chicken">
-      <div class="fbar">
-        <div class="prot"></div>
-        <div class="fats"></div>
-        <div class="carbs"></div>
-      </div>
-      <div class="fimg"><img src="" alt=""></div>
-      <div class="vert-row"></div>
-      <div class="finfo">
-        <div class="up">
-          <p>Chicken</p>
-          <button class="fg">100g</button>
-          <div class="opt"><button></button></div>
-        </div>
-        <div class="down">
-          <div class="fcal">
-            <p>365cal</p>
-          </div>
-          <div class="fmacros">
-            <div class="p"><p>28p</p></div>
-            <div class="f"><p>12f</p></div>
-            <div class="c"><p>0c</p></div>
-          </div>
-        </div>
-      </div>
-    </div> -->
-    
-    <% foods.forEach(obj => { %>
-
-      <div class="logs" id="N<%= obj.id %>">
         <div class="fimg"><img src="" alt=""></div>
         <div class="vert-row"></div>
         <div class="finfo">
           <div class="up">
-            <p><%= obj.name %></p>
-            <button onclick="displayInput(this)" class="fg" id="fg<%= obj.id %>" ><%= obj.gr %>g</button>
-            <form class="edit-form" action="/update" method="post" id="ef<%= obj.id %>">
-              <input type="number" id="inp<%= obj.id %>" onblur="updateGrams(this)" name="grams" />
-              <input type="hidden" name="food" value="<%= obj.id %>" />
-            </form>
-            <div class="del">
-              <button onclick="displayBtn(this)" id="D<%= obj.id %>">...</button>
-            </div>
-            <form action="/delete" method="post">
-              <button id="T<%= obj.id %>" name="id" value="<%= obj.id %>">del</button>
-            </form>          
+            <p>Chicken</p>
+            <button class="fg">100g</button>
+            <div class="opt"><button></button></div>
           </div>
           <div class="down">
             <div class="fcal">
-              <p><%= Math.round((obj.cal*(obj.gr/100))*10)/10 %>cal</p>
+              <p>365cal</p>
             </div>
             <div class="fmacros">
-              <div class="p"><p><%= Math.round((obj.prot*(obj.gr/100))*10)/10 %>p</p></div>
-              <div class="f"><p><%= Math.round((obj.fat*(obj.gr/100))*10)/10 %>f</p></div>
-              <div class="c"><p><%= Math.round((obj.carb*(obj.gr/100))*10)/10 %>c</p></div>
+              <div class="p"><p>28p</p></div>
+              <div class="f"><p>12f</p></div>
+              <div class="c"><p>0c</p></div>
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
+      
+      <% if (locals.foods) foods.forEach(obj => { %>
 
-    <%}) %>
+        <div class="logs" id="N<%= obj.id %>">
+          <div class="fimg"><img src="/icons/<%= obj.icon %>" alt="food image" width="100%"></div>
+          <div class="vert-row"></div>
+          <div class="finfo">
+            <div class="up">
+              <p><%= obj.name %></p>
+              <button onclick="displayInput(this)" class="fg" id="fg<%= obj.id %>" ><%= obj.gr %>g</button>
+              <form class="edit-form" action="/update" method="post" id="ef<%= obj.id %>">
+                <input type="number" inputmode="numeric" id="inp<%= obj.id %>" onblur="updateGrams(this)" name="grams" />
+                <input type="hidden" name="food" value="<%= obj.id %>" />
+              </form>
+              <div class="del">
+                <button onclick="displayBtn(this)" id="D<%= obj.id %>">...</button>
+              </div>
+              <form action="/delete" method="post">
+                <button id="T<%= obj.id %>" name="id" value="<%= obj.id %>">del</button>
+              </form>          
+            </div>
+            <div class="down">
+              <div class="fcal">
+                <p><%= Math.round((obj.cal*(obj.gr/100))*10)/10 %>cal</p>
+              </div>
+              <div class="fmacros">
+                <div class="p"><p><%= Math.round((obj.prot*(obj.gr/100))*10)/10 %>p</p></div>
+                <div class="f"><p><%= Math.round((obj.fat*(obj.gr/100))*10)/10 %>f</p></div>
+                <div class="c"><p><%= Math.round((obj.carb*(obj.gr/100))*10)/10 %>c</p></div>
+              </div>
+            </div>
+          </div>
+        </div>
 
-  </section>
+      <%}); if (foods.length == 0) {%>
+        <h1>You have no entries</h1>
+      <% } %>
 
-  <nav>
-  
-    <div class="nav-link" id="home">
-      <img src="../icons/11-119830_home-icon-white-png-clipart.jpeg" />
-      <a href="/register">Home</a>
-    </div>
+    </section>
+  </div>
 
-    <div class="nav-link" id="history">
-      <img src="/register" />
-      <a>History</a>
-    </div>
-
-    <div class="nav-link" id="add">
-      <div class="cross">
-        <div class="hor"></div>
-        <div class="ver"></div>
-      </div>
-      <div id="bgtr"></div>
-    </div>
-
-    <div class="nav-link" id="stats">
-      <img src="/register" />
-      <a>Stats</a>
-    </div>
-
-    <div class="nav-link" id="settings">
-      <img src="/register" />
-      <a>Settings</a>
-    </div>
-    
-  </nav>
+  <%- include('partials/navbar') %>
   
   
   
@@ -207,7 +184,7 @@
 
     prothtml.innerHTML = `${sumProt} gr <small> /${goal.protein}</small>`;
     fatshtml.innerHTML = `${sumFat} gr <small> /${goal.fats}</small>`;
-    carbshtml.innerHTML = `${sumFat} gr <small> /${goal.carbs}</small>`;
+    carbshtml.innerHTML = `${sumCarb} gr <small> /${goal.carbs}</small>`;
 
     if (percentage.protein>=110) {
       prot.style.background = "#ff000079";
