--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,7 +2,8 @@
   --blue: #0073C3;
   --blue-dade: #0073C325;
   --purple: #794DAF;
-  --dark: hsl(206, 17%, 20%);
+  --dark: #2a343cff;
+  --bg: #14171f;
 }
 
 body {
@@ -76,13 +77,15 @@ body {
 
 
 
-
 .hero {
   position:fixed;
   top: 0px;
   width:100%;
   height:410px;
   z-index: -1;
+  max-width: 1000px;
+  left: 50%;
+  transform: translate(-50%, 0%);
 }
 
 #date {
@@ -90,6 +93,13 @@ body {
   position:relative;
   top:10px;
   left:20px;
+}
+
+#crown {
+  width:35px;
+  position: absolute;
+  top:20px;
+  right:20px;
 }
 
 #circle {
@@ -175,11 +185,15 @@ small {
 
 section {
   padding:30px;
-  margin-top: 400px;
+  margin:400px auto 0px;
   z-index: 1;
   background-color: var(--dark);
   border:1px solid #525B62;
   border-radius:30px 30px 0px 0px;
+  border-bottom: none;
+  width: 100%;
+  max-width: 1000px;
+  box-sizing: border-box;
 }
 
 .logs {
@@ -192,19 +206,18 @@ section {
 }
 
 .logs:last-child {
-  margin-bottom: 100px;;
+  margin-bottom: 100px;
 }
 
 
 .fimg {
-  width:60px;
-  height:60px;
-  /* background-color: blue; */
-  border:1px solid grey;
+  width:50px;
+  height:50px;
+  opacity: 0.7;
   border-radius: 10%;
   position:absolute;
-  top:18px;
-  left:25px;
+  top:22px;
+  left:15px;
 }
 
 .vert-row {
@@ -213,16 +226,16 @@ section {
   background-color: grey;
   position: absolute;
   top: 10px;
-  left: 100px;
+  left: 80px;
 }
 
 .finfo > .up {
   /* background-color: orange; */
-  width:260px;
+  width:280px;
   height:30px;
   position:absolute;
   top:10px;
-  left:110px;
+  left:90px;
   display: flex;
 }
 
@@ -306,13 +319,13 @@ section {
   border-color: white;
 }
 
-.finfo > .down {
+.finfo .down {
   /* background-color: purple; */
-  width:260px;
+  width:290px;
   height:30px;
   position:absolute;
   top:48px;
-  left:110px;
+  left:80px;
   display: flex;
   justify-content: space-around;
 }
@@ -347,15 +360,19 @@ section {
 
 
 
+
 nav {
   width:100%;
+  max-width: 1000px;
   height:95px;
-  background-color: hsl(224, 22%, 10%);
+  background-color: var(--bg);
   position:fixed;
   bottom:0px;
   display: flex;
   justify-content: space-around;
   z-index: 2;
+  left: 50%;
+  transform: translate(-50%, 0%);
 }
 
 .nav-link {
@@ -363,26 +380,31 @@ nav {
   width:15%;
   max-width: 80px;
   height:75px;
-}
+} 
+
+
 
 .nav-link img {
   display: block;
-  width: 60px;
-  height: 60px;
-  margin-top:10px;
-  margin:10px auto 0px;
+  width: 40px;
+  height: 40px;
+  opacity: 0.8;
+  margin:15px auto 10px;
+}
+.nav-link img:hover {
+  opacity: 1;
 }
 
-.nav-link a {
+.nav-link a:not(.image) {
   font-weight: bolder;
-  font-size: 20px;
-  /* background-color: blue; */
+  font-size: 16px;
   height:100%;
   width: 100%;
   display: inline-block;
   text-align: center;
   color:white;
   text-decoration: none;
+  /* background-color: red; */
 }
 
 .nav-link a:hover {
@@ -394,36 +416,38 @@ nav {
   bottom: 34px;
   border-radius: 50%;
   width:75px;
-  background-color: var(--blue);
+  background-color: var(--bg);
 }
 #add:hover {
   cursor:pointer;
-  background-color: #0095ff;
+  box-shadow: 0px 0px 5px var(--blue);
 }
 
 #add .cross {
   border-radius: 50%;
   z-index: 3;
   position:relative;
+  border:3px solid var(--bg);
+  box-sizing: border-box;
 }
 
 .cross .hor {
-  background-color: hsl(224, 22%, 10%);
-  width:50px;
-  height:10px;
+  background-color: var(--blue);
+  width:40px;
+  height:8px;
   position:absolute;
-  top:32px;
-  left:12px;
+  top:31px;
+  left:14px;
   border-radius: 10px;
 }
 
 .cross .ver {
-  background-color: hsl(224, 22%, 10%);
-  width:10px;
-  height:50px;
+  background-color: var(--blue);
+  width:8px;
+  height:40px;
   position:absolute;
-  top:12px;
-  left:32px;
+  top:14px;
+  left:30px;
   border-radius: 10px;
 }
 
@@ -433,7 +457,202 @@ nav {
   height: 50px;
   border-radius: 0px 0px 50px 50px;
   position: relative;
-  top:34px;
+  bottom:46px;
   right:8px;
   z-index: -1;
+}
+
+
+
+
+
+
+
+
+
+
+#add-form {
+  text-align: center;
+  width: 100%;
+  max-width: 1000px;
+  margin: auto;
+  /* background-color: red; */
+}
+
+#add-form #header {
+  /* background-color: red; */
+  width:85%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  gap:20px;
+  padding:50px 0px 20px 0px;
+  align-items: center;
+}
+
+#add-form h1 {
+  /* background-color: green; */
+  width:180px;
+  margin:0px;
+}
+
+#add-form #submitBtn {
+  height:40px;
+  width:80px;
+  border-radius: 10px;
+  /* font-weight: bolder; */
+  font-size: 16px;
+}
+#add-form #submitBtn:hover {
+  cursor: pointer;
+  opacity: 0.9;
+}
+
+#add-form #search {
+  margin:10px auto 50px;
+  width: clamp(85%, 85%, 800px);
+  display: flex;
+  /* background-color: red; */
+  align-items: center;
+}
+#add-form #search-input {
+  width: 200px;
+  height:40px;
+  border:1px solid var(--blue);
+  border-right-color: grey;
+  border-radius: 15px 0px 0px 15px;
+  padding-left:20px;
+  font-size: 18px;
+  flex: 1;
+}
+
+#add-form #search button {
+  border-radius: 0px;
+  background-color: white;
+  border: 1px solid var(--blue);
+  border-left: none;
+  border-right: none;
+  height:40px;
+}
+#add-form #search button:hover {
+  cursor: pointer;
+  background-color: #d4d4d4;
+}
+
+#add-form #search img {
+  width:30px;
+  border-radius: 4px;
+}
+#add-form #search-input:focus {
+  outline:none;
+}
+
+#add-form #search-btn {
+  color: white;
+  width:80px;
+  height:40px;
+  border:1px solid var(--blue);
+  border-radius:0px 15px 15px 0px;
+  background-color: var(--blue);
+  font-size: 18px;
+}
+#add-form #search-btn:hover {
+  cursor:pointer;
+  background-color: #0061a7;
+}
+
+
+
+#add-form .logs {
+  width:80%;
+  margin: 20px auto 20px;
+}
+
+#add-form .name {
+  position: absolute;
+  top: -3px;
+}
+
+#add-form .serving {
+  font-size: 14px;
+  position: absolute;
+  top:25px;
+  left:0px;
+  color:grey;
+  display: flex;
+  gap:4px;
+}
+
+#add-form .serving span:focus {
+  outline: 1px solid white;
+  border-radius: 5px;
+  font-size: 20px;
+}
+
+#add-form .cal {
+  position: absolute;
+  top: 45px;
+}
+
+.active {
+  background-color: var(--blue);
+  border: 1px solid white;
+  color: white;
+}
+
+.inactive {
+  background-color: var(--dark);
+  border:1px solid grey;
+  color:grey;
+}
+
+
+#add-form .add-this-food {
+  width:40px;
+  height:40px;
+  position:absolute;
+  top:28px;
+  right:28px;
+  border-radius: 50%;
+}
+
+
+#add-form .add-this-food:hover {
+  border-color: white;
+  cursor: pointer;
+  .ver, .hor {
+    background-color: white;
+  }
+  opacity: 0.9;
+}
+
+#add-form .ver {
+  background-color: grey;
+  width:3px;
+  height:20px;
+  border-radius: 5px;
+  position: relative;
+  left:14px;
+  bottom:2px;
+}
+
+#add-form .hor {
+  background-color: grey;
+  width:20px;
+  height:3px;
+  border-radius: 5px;
+  position: relative;
+  top:9px;
+  left:5px;
+}
+
+
+@media (min-width:1000px) {
+  #add-form {
+    outline:1px solid black;
+    border-radius: 30px;
+  }
+  nav {
+    border-radius: 0px 0px 30px 30px;
+  }
 }
