--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Secrets</title>
+  <title>myNutritionTracker</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300"/>
+  <link rel="icon" type="image/png" href="/favicon.png">
 </head>
 
 <body>
