--- a/views/add-food.ejs
+++ b/views/add-food.ejs
@@ -3,7 +3,7 @@
 <form id="add-form" action="/add" method="post">
 
     <div id="header">
-        <h1>Select  a food</h1>
+        <h1>Log your foods</h1>
         <input type="button" value="Done" id="submitBtn" class="inactive" onclick="submitForm()" />
         <input type="hidden" value="" id="foodsArray" name="foodsArray"/>
         <input type="hidden" value="" id="gramsArray" name="gramsArray"/>
