--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -8,8 +8,10 @@
     </div>
 
     <div class="nav-link" id="history">
-      <img src="/icons/calendar.png" />
-      <a>History</a>
+      <a class="image" href="/history">
+        <img src="/icons/calendar.png" />
+      </a>
+      <a href="/history">History</a>
     </div>
 
     <div class="nav-link" id="add">
@@ -21,13 +23,17 @@
     </div>
 
     <div class="nav-link" id="stats">
-      <img src="/icons/statistics.png" />
-      <a>Stats</a>
+      <a class="image" href="/stats">
+        <img src="/icons/statistics.png" />
+      </a>
+      <a href="/stats">Stats</a>
     </div>
 
     <div class="nav-link" id="settings">
-      <img src="/icons/settings.png" />
-      <a>Settings</a>
+      <a class="image" href="/settings">
+        <img src="/icons/settings.png" />
+      </a>
+      <a href="/settings">Settings</a>
     </div>
     
   </nav>
