--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -11,7 +11,7 @@
 
       <p id="date"><%= fullDate %></p>
 
-      <a href="premium.ejs"><img id="crown" src="/icons/crown.png" /></a>
+      <a href="/premium" title="check out our premium plan!"><img id="crown" src="/icons/crown.png" /></a>
 
       <div id="circle">
         <!-- <div id="circle-cover"></div> -->
